# WFR_Lib

./: .gitignore  CAN_Config_generator.py  CMakeLists.txt  README.md
CAN/: CAN.cpp  CAN.hpp
include/WFR_Lib/: CAN.hpp  CAN_Signal.hpp
include/WFR_Lib/CAN_Config/: CAN_Config_Example.hpp
src/: CAN.cpp  CAN_Config_Example.cpp
